# GcToolKit

./: .gitignore  CMakeLists.txt  README.md  linux.cmake  win32.cmake
app/: CMakeLists.txt  auth.c  auth.h  bgm.cpp  bgm.h  config.c  config.h  crypto.c  crypto.h  ctrl.c  ctrl.h  device.c  device.h  draw.c  draw.h  err.c  err.h  gameinfo.c  gameinfo.h  gc_ident.c  gc_ident.h  ime.h  io.c  io.h  kernel.c  kernel.h  lock.c  lock.h  log.h  main.c  mbr.h  menu.c  menu.h  net.c  net.h  psv.h  sfo.c  sfo.h  vci.h
inc/: Error.h  GcKernKit.h  GcToolKit.h  Packet.h
kern/: CMakeLists.txt  GcKernKit.h  GcKernKit.yml  auth_emu.c  auth_emu.h  cmd56.c  cmd56.h  cobra.c  cobra.h  format.c  format.h  gc.c  gc.h  io.c  io.h  log.h  main.c  mod.h  module.c  otg.c  otg.h  sd2vita.c  sd2vita.h  sha1.c  sha256.c
kern/cmd56/: LibCmd56.vcxproj  cmd56.c  cmd56.h  cmd56_sm.c  cmd56_sm.h  compiler_defs.h  gc.h  log.h  vita.c  vita.h
kern/cmd56/crypto/: aes.c  aes.h  aes_cmac.c  aes_cmac.h
pc/: CMakeLists.txt  main.c  main.h
pc/cross/: linux.cmake  win32.cmake
